#TODO 	- Make separate FindRBF.cmake to register test and add dependencies and includes
PROJECT (density3)

SET (TEST_NAME ${PROJECT_NAME})

ADD_EXECUTABLE (${TEST_NAME} 
	main.cpp
)

INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_DIR})

ADD_DEPENDENCIES (${TEST_NAME} ${FRAMEWORK_LIBRARY})
TARGET_LINK_LIBRARIES (${TEST_NAME} ${FRAMEWORK_LIBRARY}) 

ADD_TEST (${TEST_NAME}_test1 ${EXECUTABLE_OUTPUT_PATH}/${TEST_NAME})


