#TODO 	- Make separate FindRBF.cmake to register test and add dependencies and includes
PROJECT (original)

SET (TEST_NAME ${PROJECT_NAME}.x)

ADD_EXECUTABLE (${TEST_NAME} 
	main.cpp
)

INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_DIR})

ADD_DEPENDENCIES (${TEST_NAME} ${FRAMEWORK_LIBRARY})
TARGET_LINK_LIBRARIES (${TEST_NAME} ${FRAMEWORK_LIBRARY}) 


IF (MPI_FOUND AND USE_MPI)
	TARGET_LINK_LIBRARIES (${TEST_NAME}
		${MPI_LIBRARIES}
	)
	ADD_TEST (${TEST_NAME}_test1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} "${TEST_NAME}" ${MPIEXEC_POSTFLAGS})
ELSE () 
	ADD_TEST (${TEST_NAME}_test1 "${TEST_NAME}")
ENDIF (MPI_FOUND AND USE_MPI)





