cmake_minimum_required(VERSION 2.8)

PROJECT (ncar_poisson1_nonuniform_diffusivity)

SET (TEST_NAME ${PROJECT_NAME}.x)

# COPY ANY CONFIG FILES REQUIRED BY THE TEST
FILE(COPY test.conf DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE (${TEST_NAME} 
	main.cpp
)

INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_DIR})


# Make sure the RBF.framework library is built and linked to this test
INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_DIR} ${FRAMEWORK_DEP_INCLUDE_DIRS})
ADD_DEPENDENCIES (${TEST_NAME} ${FRAMEWORK_LIBRARY} ${FRAMEWORK_DEPENDENCIES})

TARGET_LINK_LIBRARIES (${TEST_NAME} ${FRAMEWORK_LIBRARY} ${FRAMEWORK_DEPENDENCIES}) 

IF(CUDA_FOUND) 
	ADD_DEPENDENCIES(${TEST_NAME} ${FRAMEWORK_CUDA_LIBRARY})
	TARGET_LINK_LIBRARIES (${TEST_NAME} ${FRAMEWORK_CUDA_LIBRARY} ) 
ENDIF(CUDA_FOUND) 

IF(OPENCL_FOUND) 
	ADD_DEPENDENCIES(${TEST_NAME} ${FRAMEWORK_OPENCL_LIBRARY})
	TARGET_LINK_LIBRARIES (${TEST_NAME} ${FRAMEWORK_OPENCL_LIBRARY} ) 
ENDIF(OPENCL_FOUND)

IF (MPI_FOUND AND USE_MPI)
	TARGET_LINK_LIBRARIES (${TEST_NAME}
		${MPI_LIBRARIES}
	)

	ADD_TEST (${TEST_NAME}_test1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${MPIEXEC_PREFLAGS} "${TEST_NAME}" ${MPIEXEC_POSTFLAGS})
ELSE () 
	ADD_TEST (${TEST_NAME}_test1 "${TEST_NAME}")
ENDIF (MPI_FOUND AND USE_MPI)





